// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConsultationPad Rendering Snapshots should match snapshot for error state 1`] = `
<div>
  <div
    data-testid="mock-action-area"
  >
    <div
      data-testid="action-area-title"
    >
      CONSULTATION_PAD_TITLE
    </div>
    <div
      data-testid="action-area-content"
    >
      <div
        class="cds--css-grid"
      >
        <div
          class="cds--sm:col-span-4 cds--md:col-span-8 cds--lg:col-span-16 cds--css-grid-column"
        >
          <h2>
            CONSULTATION_PAD_ERROR
          </h2>
        </div>
      </div>
    </div>
    <button
      data-testid="primary-button"
    >
      CONSULTATION_PAD_DONE_BUTTON
    </button>
    <button
      data-testid="secondary-button"
    >
      CONSULTATION_PAD_CANCEL_BUTTON
    </button>
  </div>
</div>
`;

exports[`ConsultationPad Rendering Snapshots should match snapshot for loading state 1`] = `
<div>
  <div
    data-testid="mock-action-area"
  >
    <div
      data-testid="action-area-title"
    >
      CONSULTATION_PAD_TITLE
    </div>
    <div
      data-testid="action-area-content"
    >
      <div
        class="cds--css-grid"
      >
        <div
          class="cds--sm:col-span-3 cds--md:col-span-8 cds--lg:col-span-16 cds--css-grid-column"
        >
          <div
            aria-atomic="true"
            aria-live="assertive"
            class="cds--loading"
          >
            <svg
              class="cds--loading__svg"
              viewBox="0 0 100 100"
            >
              <title>
                CONSULTATION_PAD_LOADING
              </title>
              <circle
                class="cds--loading__stroke"
                cx="50%"
                cy="50%"
                r="44"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <button
      data-testid="primary-button"
    >
      CONSULTATION_PAD_DONE_BUTTON
    </button>
    <button
      data-testid="secondary-button"
    >
      CONSULTATION_PAD_CANCEL_BUTTON
    </button>
  </div>
</div>
`;

exports[`ConsultationPad Rendering Snapshots should match snapshot for normal state 1`] = `
<div>
  <div
    data-testid="mock-action-area"
  >
    <div
      data-testid="action-area-title"
    >
      CONSULTATION_PAD_TITLE
    </div>
    <div
      data-testid="action-area-content"
    >
      <div
        data-testid="mock-basic-form"
      />
      <div
        class="cds--tile"
      >
        <h3>
          DIAGNOSES_FORM_TITLE
        </h3>
        <div
          aria-label="DIAGNOSES_SEARCH_PLACEHOLDER"
          class="cds--search cds--search--lg"
          role="search"
        >
          <div
            class="cds--search-magnifier"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              class="cds--search-magnifier-icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15,14.3L10.7,10c1.9-2.3,1.6-5.8-0.7-7.7S4.2,0.7,2.3,3S0.7,8.8,3,10.7c2,1.7,5,1.7,7,0l4.3,4.3L15,14.3z M2,6.5 C2,4,4,2,6.5,2S11,4,11,6.5S9,11,6.5,11S2,9,2,6.5z"
              />
            </svg>
          </div>
          <label
            class="cds--label"
            for="diagnoses-search"
            id="diagnoses-search-search"
          />
          <input
            autocomplete="off"
            class="cds--search-input"
            id="diagnoses-search"
            placeholder="DIAGNOSES_SEARCH_PLACEHOLDER"
            role="searchbox"
            type="text"
          />
          <button
            aria-label="Clear search input"
            class="cds--search-close cds--search-close--hidden"
            title="Clear search input"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <button
      data-testid="primary-button"
    >
      CONSULTATION_PAD_DONE_BUTTON
    </button>
    <button
      data-testid="secondary-button"
    >
      CONSULTATION_PAD_CANCEL_BUTTON
    </button>
  </div>
</div>
`;
